[tool.poetry]
name = "blognes"
version = "0.1.0"
description = ""
authors = ["Nícolas Albuquerque Ramos <nicolasalbuquerque581@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
