[tool.poetry]
name = "blognes"
version = "0.1.0"
description = ""
authors = ["Nícolas Albuquerque Ramos <nicolas.albu@outlook.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Jinja2 = "^3.1.2"
toml = "^0.10.2"
bcrypt = "^4.0.1"

[tool.black]
skip-string-normalization = true
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
